--- a/css/spinner.css
+++ b/css/spinner.css
@@ -28,10 +28,8 @@
   height: 100%;
   background: radial-gradient(rgba(20, 20, 20, 0.8), rgba(0, 0, 0, 0.8));
 
-  background: -webkit-radial-gradient(
-    rgba(20, 20, 20, 0.8),
-    rgba(0, 0, 0, 0.8)
-  );
+  background: -webkit-radial-gradient(rgba(20, 20, 20, 0.8),
+      rgba(0, 0, 0, 0.8));
 }
 
 /* :not(:required) hides these rules from IE9 and below */
@@ -85,6 +83,7 @@
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
@@ -93,6 +92,7 @@
     transform: rotate(360deg);
   }
 }
+
 @-moz-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
@@ -101,6 +101,7 @@
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
@@ -109,6 +110,7 @@
     transform: rotate(360deg);
   }
 }
+
 @-o-keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
@@ -117,6 +119,7 @@
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
@@ -125,6 +128,7 @@
     transform: rotate(360deg);
   }
 }
+
 @keyframes spinner {
   0% {
     -webkit-transform: rotate(0deg);
@@ -133,6 +137,7 @@
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
